# whatsupdoc

./: README.md  manage.py  pyproject.toml
docapp/: admin.py  forms.py  models.py  urls.py  views.py
docapp/templates/: index.html  ticket_details.html  ticket_form.html  user_details.html  user_form.html
docproject/: asgi.py  settings.py  urls.py  wsgi.py
